<resources>
    <string name="app_name">二手市场</string>
    <string name="action_settings">设置</string>
    <!-- 主界面的String -->
    <string name="et_login">用户名</string>
    <string name="et_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <!-- 活动名称 -->
    <string name="title_activity_logined">LoginedActivity</string>
    <string name="action_notification">Notification</string>
    <string name="title_activity_my">MyActivity</string>
    <!--注册界面的String -->
    <string name="title_activity_register">注册</string>
    <string name="btn_forgetpassword">\?忘记密码</string>
    <string name="btn_mainToRegister">新用户注册</string>
    <string name="et_register_username">请输入用户名</string>
    <string name="et_register_password">请输入密码</string>
    <string name="et_register_sure">请确认密码</string>
    <string name="et_register_nickname">请输入昵称</string>
    <string name="et_register_email">请输入邮箱</string>
    <string name="et_register_checkcode">请输入验证码</string>
    <string name="btn_register_newimage">看不清 换一张</string>
    <string name="btn_register_register">注册</string>
    <!-- 我的活动界面中的String-->
    <string name="back_and_help">退款/售后</string>
    <string name="shoppingcar">购物车</string>
    <string name="order">订单</string>
    <string name="showmessage">点击查看信息</string>
    <!--底部导航栏的String -->
    <string name="community">社区</string>
    <string name="myself">我的</string>
    <string name="weitao">微淘</string>
    <string name="main">首页</string>
    <!--设置主页面中的String -->
    <string name="ll_information">个人信息</string>
    <string name="ll_nomalsetting">通用</string>
    <string name="ll_tecent">腾讯微博</string>
    <string name="ll_phone">手机号码匹配</string>
    <string name="ll_feedback">意见反馈</string>
    <string name="ll_aboutus">关于我们</string>
    <string name="btn_outlogin">退出</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>

    <!--找回密码中的String-->
    <string name="findpassword_title">找回密码</string>
    <string name="title_activity_settings">Settings</string>

    <!--dialog中的String-->
    <string name="sure">确认</string>
    <string name="cancled">取消</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_user_information">UserInformationActivity</string>
    <string name="title_activity_normal_setting">NormalSettingActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_add_goods">AddGoodsActivity</string>
    <string name="title_activity_goods_description">GoodsDescription</string>
    <string name="title_activity_find_goods_description">FIndGoodsDescription</string>
</resources>
