<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4e7bdd">

    <Button

        android:textSize="@dimen/textsize_very_small"
        android:id="@+id/btn_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/main" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weitao"
        android:textSize="@dimen/textsize_very_small" />

    <Button

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/community"
        android:textSize="@dimen/textsize_very_small" />

    <Button
        android:id="@+id/shopping_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/shoppingcar"
        android:textSize="@dimen/textsize_very_small" />

    <Button
        android:id="@+id/btn_loginToMy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/myself"
        android:textSize="@dimen/textsize_very_small" />
</LinearLayout>
