<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3c2c2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.swpuiot.stp.views.MyActivity"
    tools:showIn="@layout/activity_my">

    <ListView
        android:id="@+id/lv_my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#fafafa" />

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_my"
        android:layout_marginTop="30dp"
        android:background="#fafafa">

        <Button
            android:id="@+id/btn_my_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/shoppingcar" />

        <Button
            android:id="@+id/btn_my_orders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/order" />

        <Button
            android:id="@+id/btn_my_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/back_and_help" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_mymenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_btn"
        android:layout_marginTop="30dp"
        android:background="#fafafa" />

</RelativeLayout>
